# evrostan

./: pyproject.toml
crawler/: api.py  pyproject.toml
crawler/crawler/: api.py  main.py
detector/detector/: main.py
