[tool.poetry]
name = "evrostan"
version = "0.1.0"
description = "our homeland"
authors = ["monomonedula <valh@tuta.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
geopy = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
